# DesignPatterns

./: README.md  broker.cpp  broker.h  buy_stock.cpp  buy_stock.h  clear.sh  demo.cpp  generate.sh  meson.build  order.h  sell_stock.cpp  sell_stock.h  set_up.sh  stock.cpp
api/: order.h  stock.h
src/: broker.cpp  buy_stock.cpp  demo.cpp  sell_stock.cpp  stock.cpp
