project('DesignPatterns', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++14'])

executable('DesignPatterns',
           'src/demo.cpp',
           'src/stock.cpp',
           'src/sell_stock.cpp',
           'src/buy_stock.cpp',
           'src/broker.cpp',
           install : true)
